--- a/Restaurant APP/buySaucer.html
+++ b/Restaurant APP/buySaucer.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">SAUCER</a>
+              <a class="nav-link text-uppercase text-expanded" href="saucer.html">SAUCER</a>
             </li>
           </ul>
         </div>
