--- a/Restaurant APP/login.html
+++ b/Restaurant APP/login.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="client.html">LOGIN</a>
+              <a class="nav-link text-uppercase text-expanded" href="login.html">LOGIN</a>
             </li>
           </ul>
         </div>
@@ -60,6 +60,7 @@
     <form id='form'  method="GET" style="background:rgba(240, 208, 167, 0.9)">
 
       <div class="container">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/login.jpg" alt="">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
