--- a/Restaurant APP/menu.html
+++ b/Restaurant APP/menu.html
@@ -49,16 +49,16 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="about.html">Register</a>
+                <a class="nav-link text-uppercase text-expanded" href="menuRegister.html">Register</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="about.html">Search</a>
+                <a class="nav-link text-uppercase text-expanded" href="menuSearch.html">Search</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="http://localhost:8080/CyberRestaurant/listMenu.jsp">List</a>
+                <a class="nav-link text-uppercase text-expanded" href="U_24.php">List</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="buySaucer.html">Delete</a>
+                <a class="nav-link text-uppercase text-expanded" href="deleteMenu.html">Delete</a>
             </li>
           </ul>
         </div>
@@ -68,6 +68,7 @@
     <div id='form'  method="GET" style="background:rgba(240, 208, 167, 0.9)">
 
       <div class="container">
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/menu.jpg" alt="">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
@@ -76,21 +77,21 @@
                   <b>SELECT AN OPTION</b>
                 </span>
               </h2>
-                <button method="GET" onclick="location.href='./buySaucer.html'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./menuRegister.html'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 REGISTER MENU
                 </button>
 
-                <button method="GET" onclick="location.href='./buySaucer.html'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./menuSearch.html'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 SEARCH MENU
                 </button>
 
-                <button method="GET" onclick="location.href='http://localhost:8080/CyberRestaurant/listMenu.jsp'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./U_24.php'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 LIST MENU
                 </button>
-                <button method="GET" onclick="location.href='./buySaucer.html'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./deleteMenu.html'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 DELETE MENU
                 </button><br><br>
