--- a/Restaurant APP/client.html
+++ b/Restaurant APP/client.html
@@ -55,10 +55,10 @@
                 <a class="nav-link text-uppercase text-expanded" href="clientSearch.html">Search</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="http://localhost:8080/CyberRestaurant/listClient.jsp">List</a>
+                <a class="nav-link text-uppercase text-expanded" href="U_13.php">List</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="buySaucer.html">Delete</a>
+                <a class="nav-link text-uppercase text-expanded" href="deleteClient.html">Delete</a>
             </li>
           </ul>
         </div>
@@ -68,6 +68,7 @@
     <div id='form'  method="GET" style="background:rgba(240, 208, 167, 0.9)">
 
       <div class="container">
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/client.jpg" alt="">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
@@ -86,11 +87,11 @@
                 SEARCH CLIENT
                 </button>
 
-                <button method="GET" onclick="location.href='http://localhost:8080/CyberRestaurant/listClient.jsp'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./U_13.php'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 LIST CLIENT
                 </button>
-                <button method="GET" onclick="location.href='./buySaucer.html'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./deleteClient.html'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 DELETE CLIENT
                 </button><br><br>
