--- a/Restaurant APP/user.html
+++ b/Restaurant APP/user.html
@@ -55,10 +55,10 @@
                 <a class="nav-link text-uppercase text-expanded" href="userSearch.html">Search</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="http://localhost:8080/CyberRestaurant/listUser.jsp">List</a>
+                <a class="nav-link text-uppercase text-expanded" href="U_9.php">List</a>
             </li>
             <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="buySaucer.html">Delete</a>
+                <a class="nav-link text-uppercase text-expanded" href="deleteUser.html">Delete</a>
             </li>
           </ul>
         </div>
@@ -68,6 +68,7 @@
     <div id='form'  method="GET" style="background:rgba(240, 208, 167, 0.9)">
 
       <div class="container">
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/user.jpg" alt="">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
@@ -86,12 +87,12 @@
                 SEARCH USER
                 </button>
 
-                <button method="GET" onclick="location.href='http://localhost:8080/CyberRestaurant/listUser.jsp'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./U_9.php'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 LIST USER
                 </button>
 
-                <button method="GET" onclick="location.href='./buySaucer.html'" style="background:rgba(27, 15, 1, 0.9)" 
+                <button method="GET" onclick="location.href='./deleteUser.html'" style="background:rgba(27, 15, 1, 0.9)" 
                 class="btn btn-primary" name="cl" id="cl">
                 DELETE USER
                 </button><br><br>
